# ROBOCON

./: LSA08uart.ino  MPU6050.ino  Mecchanum_Drive.ino  Omni_drive.ino  PS2.ino  PS3.ino  README.md  Solenoid_Actuation.ino
AllSensorBot/: AllSensorBot.ino  Config.h  Constants.h  MotorDriver.h
AutoBotEncoderMotors/: AutoBotEncoderMotors.ino  Constants.h  MotionController.h
AutoBotMotors/: AutoBotMotors.ino  Constants.h  IRSensor.h  MotorController.h
AutoBotPistonCT/: AutoBotPistonCT.ino  AutoBotPistonCT.sln  AutoBotPistonCT.vcxproj  AutoBotPistonCT.vcxproj.filters  Functions.h  pins.h
AutoBotPistonCT(latest)/: AutoBotPistonCT.ino  Functions.h  pins.h
AutoBotPistonMotors/: AutoBotPistonMotors.ino  Constants.h  Debug.h  Encoders.h  IRSensor.h  MotionController.h  Piston.h
Communication/: I2c_Anything_Master-Sender.ino  I2c_Anything_Slave-Receiver.ino
EasyTransferImpl/: EasyTransferImpl.ino
GyoReadingComm/: GyoReadingComm.ino
GyroBot/: AngleSensor.h  AngleType.h  Constants.h  GyroBot.lnk  GyroBot.sln  GyroBot.vcxproj  GyroBot.vcxproj.filters  Gyrobot.ino  MadgwickAHRS.cpp  MadgwickAHRS.h  MotorDriver.h  Point3.h
ManualBotEncoderMotors/: .clang-format  .gitignore  Constants.h  IRSensor.h  LSA08.h  LSA08s.h  ManualBotEncoderMotors.ino  MotorController.h  SingleMotorController.h
Manual_BOT_2018/: Manual_BOT_2018.ino  PS2X_lib.h  debug.ino  magnetometer.ino  mecanumRun.ino  motor.ino  ping.ino  pins.h
MotorDriver/: AllSensorBot.ino
OMNI4WD/: omnilib.cpp  omnilib.h  platform30.ino
Omni4WDLatest/: LSA08.h  MotorController.h  Omni4WDLatest.ino  Solution1.sln
OpenCV/: RaspberryPiLineDetector.py  Readme Important.txt
OpenCV/LineDetector/: .clang-format  CMakeLists.txt  main.cxx
OpenCV/LineDetector/include/: EasyTransferI2CPi.hxx  I2C.hxx  LineDetector.hxx  SPI.hxx  SwitchCamera.hxx  Window.hxx
OpenCV/LineDetector/src/: LineDetector.cxx
OpenCV/SimpleLineDetector/: CMakeLists.txt  main.cxx
OpenCV/SimpleLineDetector/include/: Camera.hxx  LineDetector.hxx  Window.hxx
PS3withMotor/: PS3withMotor.ino
ROBOCON 2019/: ps2xofficial.ino  ps3official.ino
ROBOCON_MAIN/: arduino_pin_checking_code.ino
Website/: Achievements.html  Alumni.html  CNAME  Final-Proposal-Alumni_new.docx  Gallery.html  about.html  (+9 more)
(+111 files in other folders)
